Cleaner version of apply object and adding support for YAML
